--- a/project.json
+++ b/project.json
@@ -1,9 +1,10 @@
 {
   "name": "babel",
   "description": "Node.js Babel (using webpack) example project",
-  "role": "arn:aws:iam::293503197324:role/apex_lambda_function",
-  "runtime": "nodejs",
+  "role": "arn:aws:iam::752558410180:role/lambda_rethinkdb",
+  "runtime": "nodejs4.3",
   "handler": "lib.default",
+  "timeout": 10,
   "hooks": {
     "build": "../../node_modules/.bin/webpack --config ../../webpack.config.js --bail",
     "clean": "rm -fr lib"
